--- a/htrmldud.html
+++ b/htrmldud.html
@@ -449,7 +449,7 @@ ORDER BY name ASC;">
 
 <script>
     // Backend API URL - Change this to your actual backend URL
-    const BACKEND_URL = 'http://127.0.0.1:8000'; // Default FastAPI port
+    const BACKEND_URL = 'https://nl2sql-chatbot.onrender.com'; // Default FastAPI port
     
     // Initialize feather icons
     feather.replace();
@@ -1071,4 +1071,5 @@ ORDER BY name ASC;">
     });
 </script>
 </body>
+
 </html>
